plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.2' 
    id 'io.spring.dependency-management' version '1.1.6'
    id 'io.freefair.lombok' version '8.6'
}

group = 'com.my'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
    maven { url 'https://repo.spring.io/release' } 
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.postgresql:postgresql:42.7.3'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    compileOnly 'org.projectlombok:lombok:1.18.32'
    annotationProcessor 'org.projectlombok:lombok:1.18.32'
    testCompileOnly 'org.projectlombok:lombok:1.18.32'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.32'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    //env용
    implementation 'io.github.cdimascio:java-dotenv:5.2.2'
    // AWS S3 SDK
    implementation 'software.amazon.awssdk:s3:2.24.12'
    implementation 'software.amazon.awssdk:sts:2.24.12'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
    implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
    implementation 'com.fasterxml.jackson.core:jackson-databind'
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    implementation 'software.amazon.awssdk:s3:2.24.12'
    implementation 'software.amazon.awssdk:sts:2.24.12'    
    // PDF 생성
    implementation 'org.apache.pdfbox:pdfbox:2.0.29'
    // HTML parsing for crawling
    implementation 'org.jsoup:jsoup:1.17.2'
    // Playwright for Java (dynamic crawling)
    implementation 'com.microsoft.playwright:playwright:1.46.0'
}

tasks.named('test') {
    useJUnitPlatform()
}